--- a/>index.html
+++ b/>index.html
@@ -6,16 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href=">style.css">
 </head>
+<img class="cabeçalho-lista-item" src=".alurastart logo.png" alt="LOGO DA ALURA START">
 <body>
-    <h1>VAI SER UMA IMAGEM AQUI</h1>
-        <ul>
+
+    ><ul class="cabeçalho-lista-item">
+
             <li>ESTUDANTE</li>
             <li>ESCOLA</li>
         </ul>
-    <header>
+        <header>
+        </header>
+    </body>
 
-<img class="cabeçalho" src="alurastart logo.png" alt="logo alura start">
- <body>
-
- </body>
-</html>
+    </html>
