--- a/>index.html
+++ b/>index.html
@@ -6,16 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href=">style.css">
 </head>
-<img class="cabeçalho-lista-item" src=".alurastart logo.png" alt="LOGO DA ALURA START">
+<header class="cabecalho">
+<img class="cabecalho-lista-item" src="./alurastart logo.png" alt="LOGO DA ALURA START">
 <body>
-
-    ><ul class="cabeçalho-lista-item">
-
-            <li>ESTUDANTE</li>
-            <li>ESCOLA</li>
+    <ul class="cabeçalho-lista-item">
+            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Escola</li>
         </ul>
-        <header>
-        </header>
-    </body>
-
-    </html>
+     </header>
+<section class="escola">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+<p class="escola-texto-um">A turma do 2A, é uma turma bastante agitada, porém bastante produtiva</p>
+</section>
+</body>
+</html>
