--- a/>index.html
+++ b/>index.html
@@ -16,7 +16,9 @@
      </header>
 <section class="escola">
         <h2 class="escola-titulo">Sobre a Escola</h2>
-<p class="escola-texto-um">A turma do 2A, é uma turma bastante agitada, porém bastante produtiva</p>
+<p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional através da programação</p>
+<p classs="escola-texto-dois">A turma mais famosa é a segunda série A, uma turma engajada e diversa, as vezes um pouco bagunçeira, mas entrega excelentes resultados</p>
+<img scr="./alurastart logo.png" alt="Aula">
 </section>
 </body>
 </html>
