--- a/>index.html
+++ b/>index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href=">style.css">
+    <link rel="preconnnect" href="https://fonts.googleapis.com">
+    <link rel="preconnnect" href="httś://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/c2?family=Inter:hgwt@700&family=poppins:">
 </head>
 <header class="cabecalho">
 <img class="cabecalho-lista-item" src="./alurastart logo.png" alt="LOGO DA ALURA START">
@@ -18,7 +21,11 @@
         <h2 class="escola-titulo">Sobre a Escola</h2>
 <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional através da programação</p>
 <p classs="escola-texto-dois">A turma mais famosa é a segunda série A, uma turma engajada e diversa, as vezes um pouco bagunçeira, mas entrega excelentes resultados</p>
-<img scr="./alurastart logo.png" alt="Aula">
+<img src="./End of school-amico.png" alt="Turma sendo feliz">
 </section>
 </body>
 </html>
+<section class="Estudante">
+    <h2 class="escola-titulo">Quem são nossos estudantes</h2>
+    <img src="./Mickey_Mouse.png" alt="Foto de AlexandriiS2"> 
+</section>
