--- a/>index.html
+++ b/>index.html
@@ -6,26 +6,28 @@
     <title>Document</title>
     <link rel="stylesheet" href=">style.css">
     <link rel="preconnnect" href="https://fonts.googleapis.com">
-    <link rel="preconnnect" href="httś://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/c2?family=Inter:hgwt@700&family=poppins:">
+    <link rel="preconnnect" href="https:fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=poppins:700&display=swap" rel="styleheet">
 </head>
 <header class="cabecalho">
 <img class="cabecalho-lista-item" src="./alurastart logo.png" alt="LOGO DA ALURA START">
 <body>
-    <ul class="cabeçalho-lista-item">
+    <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Estudante</li>
             <li class="cabecalho-lista-item">Escola</li>
         </ul>
      </header>
 <section class="escola">
+        <div class="escola-conteudo">
         <h2 class="escola-titulo">Sobre a Escola</h2>
 <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional através da programação</p>
 <p classs="escola-texto-dois">A turma mais famosa é a segunda série A, uma turma engajada e diversa, as vezes um pouco bagunçeira, mas entrega excelentes resultados</p>
-<img src="./End of school-amico.png" alt="Turma sendo feliz">
+<img class="escola-imagem" src="./End of school-amico.png" alt="Turma sendo feliz">
+</div>
+</section>
+<section class="Estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+    <img src="./Mickey_Mouse.png" alt="Foto do aluno"> 
 </section>
 </body>
 </html>
-<section class="Estudante">
-    <h2 class="escola-titulo">Quem são nossos estudantes</h2>
-    <img src="./Mickey_Mouse.png" alt="Foto de AlexandriiS2"> 
-</section>
