--- a/>index.html
+++ b/>index.html
@@ -16,6 +16,24 @@
                 <li class="cabecalho-lista-item">estudante</li>
             </ul>
     </header>
+    <section class="escola"><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=decive-width,initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnnect" href="https://fonts.googleapis.com">
+    <link rel="preconnnect" href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=poppins:700&display=swap" rel="stylesheet">
+    </head>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./AluraStartLogo.png" alt="logo da alura start">
+        <body>
+            <ul class="cabecalho-lista">
+                <li class="cabecalho-lista-item">escola</li>
+                <li class="cabecalho-lista-item">estudante</li>
+            </ul>
+    </header>
     <section class="escola">
         <div class="escola-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
@@ -48,6 +66,72 @@
             <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
             <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
         </div>
+    </section>
+</body>
+</html>
+        <div class="escola-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de Programação.</p>
+            <p class="escola-texto-dois">A turma mais famoso e famoso é a Segunda Série A, as vezes são um pouco bagunceiros mas com excelentes resultados.</p>
+            <img class="escola-imagem" src="./SalaDeAula.png" alt="aluno">
+        </div>
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
+        <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+                <h3 class="">Mickey</h3>
+                <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+                <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+                <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+            <span></span>
+             <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+            <span></span>
+             <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+            <span></span>
     </section>
 </body>
 </html>
