--- a/>index.html
+++ b/>index.html
@@ -21,8 +21,8 @@
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de Programação.</p>
             <p class="escola-texto-dois">A turma mais famoso e famoso é a Segunda Série A, as vezes são um pouco bagunceiros mas com excelentes resultados.</p>
+    </div>     
             <img class="escola-imagem" src="./SalaDeAula.png" alt="aluno">
-        </div>
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
@@ -49,6 +49,51 @@
             <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
             <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
         </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
+            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
+            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+        </div>
+        <span></span>
     </section>
 </body>
 </html>
