--- a/>index.html
+++ b/>index.html
@@ -30,70 +30,73 @@
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-                <h3 class="">Mickey</h3>
-                <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-                <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-                <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+                <h3 class="">Mickey</h3> 
+                <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
             <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
             <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
-        </div>
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
             <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+        <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
             <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
+            <h3 class="">Mickey</h3>
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+            <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
             </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
             <h3 class="">Mickey</h3>
-            <img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram">
-            <img class="estudante-icone" src="./GithubLogo.png" alt="Github">
-            <img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin">
+            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
+        <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <span></span>
     </section>
+      <footer>
+           <img src="./AluraStartLogo.png" alt="Logo AluraStart">
+        </footer>
 </body>
 </html>
