--- a/>index.html
+++ b/>index.html
@@ -29,74 +29,74 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-                <h3 class="">Mickey</h3> 
-                <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+                <img class="estudante-imagem" src="./Alexandre.webp" alt="foto do aluno">
+                <h3 class="">Alexandre Melo</h3> 
+                <a href="https://www.instagram.com/alxandre_melos2/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Perfeição em forma de pessoa.webp" alt="foto do aluno">
+            <h3 class="">Angel Abril</h3>
+            <a href="https://www.instagram.com/purpleangel3394/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Rubius.webp" alt="foto do aluno">
+            <h3 class="">Rubén Doblas</h3>
+            <a href="https://www.instagram.com/elrubiuswtf/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
+            <img class="estudante-imagem" src="./Luka.webp" alt="foto do aluno">
+            <h3 class="">Luka Faot</h3>
             <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
             <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
         <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Sam.webp" alt="foto do aluno">
+            <h3 class="">Sam Lopes</h3>
+            <a href="https://www.instagram.com/sam_.zea/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Gabriela.webp" alt="foto do aluno">
+            <h3 class="">Gabriela Rosa</h3>
+            <a href="https://www.instagram.com/gabi._.by/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Leco.webp" alt="foto do aluno">
+            <h3 class="">Alexsandro Melo</h3>
+            <a href="https://www.instagram.com/alexsandro._.32/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Sthefanny.webp" alt="foto do aluno">
+            <h3 class="">Sthefanny Santos</h3>
+            <a href="https://www.instagram.com/stheef.santos/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
                 <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
             <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
             </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./Aluno.jpg" alt="foto do aluno">
-            <h3 class="">Mickey</h3>
-            <a href="https://www.instagram.com/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
+            <img class="estudante-imagem" src="./Vitória.webp" alt="foto do aluno">
+            <h3 class="">Vitória Hoinski</h3>
+            <a href="https://www.instagram.com/vitoria.hoinski.soares/"><img class="estudante-icone" src="./InstagramLogo.png" alt="Instagram"></a>
             <a href="https://www.github.com/"><img class="estudante-icone" src="./GithubLogo.png" alt="Github"></a>
         <a href="https:/www.linkedin.com/"><img class="estudante-icone" src="./LinkedinLogo.png" alt="Linkedin"></a>
         </div>
         <span></span>
     </section>
-      <footer>
-           <img src="./AluraStartLogo.png" alt="Logo AluraStart">
-        </footer>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="./AluraStartLogo.png" alt="logo da alura start">
+    </footer>
 </body>
 </html>
